# Lynx

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/app/: config.py  main.py
apps/api/src/app/agents/: base.py  careers.py  competitors.py  financials.py  funding.py  legitimacy.py  news.py  orchestrator.py  overview.py  patents.py  people.py  products.py  profile.py  relevance.py  resolve.py  signals.py  social.py  stock.py  synthesis.py  web_presence.py
apps/api/src/app/api/: autocomplete.py  chat.py  compare.py  config.py  entities.py  jobs.py  realtime.py  research.py
apps/api/src/app/db/: engine.py  models.py
apps/api/src/app/documentary/: generator.py
apps/api/src/app/graph/: extraction.py  resolution.py
apps/api/src/app/jobs/: manager.py
apps/api/src/app/llm/: client.py  providers.py  selection.py
apps/api/src/app/rag/: retriever.py
apps/api/src/app/sources/: base.py  domain.py  firecrawl.py  github.py  gleif.py  google_news.py  hn.py  http.py  jobs.py  layers.py  patents.py  reader.py  reddit.py  sec_edgar.py  socials.py  wayback.py  websearch.py  webtech.py  wikidata.py  wikipedia.py  yfinance_source.py
apps/api/tests/: test_compare.py  test_layers.py  test_legitimacy.py  test_llm_degraded.py  test_resolution.py  test_resolve.py  test_synthesis.py  test_webtech.py
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/public/brand/: README.md
(+24 files in other folders)
