[project]
name = "research-api"
version = "0.1.0"
description = "Multi-agent business research backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0.36",
    "httpx>=0.28",
    "sse-starlette>=2.1",
    "aiolimiter>=1.2",
    "tenacity>=9",
    "yfinance>=0.2.50",
    "feedparser>=6.0.11",
    "rapidfuzz>=3.10",
    "openai>=1.60",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "respx>=0.22"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
